Updated style as the bars were changing height and not aligning correctly

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,16 @@
   top: 10%;
 }
 
+.array-container > .test {
+  display: flex; 
+}
+
 .array-bar {
   display: inline-block;
   background-color: #bb86fc;
   margin: 0 2px;
   width: 7px;
+  vertical-align: bottom;
 }
 
 .generate-array button{
@@ -27,5 +32,8 @@
 }
 
 .test {
-  height: 1000px;
+  height: 605px;
+  display: table-cell;
+  vertical-align: bottom;
+  justify-content: center;
 }
